k8's/node_ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#name-based-virtual-hosting

  # For example, the following Ingress routes traffic requested for first.bar.com to service1,
  # second.foo.com to service2, and any traffic to the IP address without a hostname defined in request
  # (that is, without a request header being presented) to service3.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejsk8
  namespace: 
  annotations: 
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test.com
    http:
      paths:
        - path: /*
          pathType: "Prefix"
      
          backend:
            service:
              name: nodejsk8
              port: 
                number : 80
